# rs-hyperliquid

./: .gitignore  AGENTS.md  Cargo.toml  _v01-llm.md  dprint.json  justfile  opencode.json  readme.md
.github/workflows/: ci.yml
docs/: architecture.md  cargo-manifest.md  index.md  rustdoc.md  technical-analysis.md  testing-plan.md  usage.md
docs/rules/: opencode-core.md  opencode-rust.md
examples/: debug_connection.rs
scripts/: build_rustdoc.sh  check_docs_no_emoji.sh
src/: cli.rs  client.rs  client_state.rs  config.rs  error.rs  events.rs  formatter.rs  lib.rs  main.rs  monitoring.rs  tracing_setup.rs  types.rs  ui.rs
