[package]
name = "rs-hyperliquid"
version = "0.1.0"
authors = ["cipher <https://github.com/cipher-rc5>"]
categories = ["command-line-utilities", "api-bindings", "asynchronous"]
edition = "2024"
exclude = ["examples/debug_connection"]
homepage = "https://github.com/cipher-rc5/rs-hyperliquid"
keywords = ["hyperliquid", "websocket", "trading", "cryptocurrency", "real-time"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/cipher-rc5/rs-hyperliquid"
rust-version = "1.91"
description = "High-performance WebSocket client for Hyperliquid trading data with real-time market data streaming"

[[bin]]
name = "rs-hyperliquid"
path = "src/main.rs"

[[example]]
name = "debug_connection"
path = "examples/debug_connection.rs"

[dependencies]
# error handling
anyhow = "1.0.101"
thiserror = "2.0"

# serialization and message types
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# cli and runtime
clap = { version = "4.5.58", features = ["derive", "color", "suggestions"] }
tokio = { version = "1.0", features = ["full"] }

# networking and transport
fastrand = "2.3.0"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }

# observability
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# utility crates
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
webpki-roots = "1.0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
